# ml-systems-study

./: .gitignore
ZeRO/: README.md
fsdp/: README.md
megatron_lm/: README.md
mixed_precision_training/: README.md
onnx/: generate_serving_model.py  locustfile.py  random_request_sampler.py  server.py
onnx_cpp/: CMakeLists.txt  generate_serving_model.py  httplib.h  mnist_classifier.pth  server.cpp
onnx_cpp/docker/: Dockerfile  README
orca/: README.md
triton/: generate_serving_model.py  http_burst_workload.py  http_client_random_request.py  http_poisson_workload.py  http_uniform_workload.py  locustfile.py  poisson_workload_generator.py  simple_mlp.py
triton/model_repository/mnist_classifier/: config.pbtxt
triton/model_repository/simple_mlp/: config.pbtxt
vllm/: README.md
